--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "asesoriasth-backend",
   "version": "1.0.0",
@@ -22,9 +21,13 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "googleapis": "^153.0.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "bcrypt": "^5.1.1",        
+    "jsonwebtoken": "^9.0.2",   
+    "pg": "^8.12.0"             
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  }
+  },
+  "type": "module" 
 }
